# lorenz_attractor

./: .gitignore  CMakeLists.txt  Makefile  README.md  attractor_log.txt  lorenz
inc/: Attractor.hpp  Points.hpp  main.hpp  simulation.hpp
scripts/: visualizer.py
src/: Attractor.cpp  Points.cpp  formulas.cpp  main.cpp  main_backup.cpp  utils.cpp
